# test-pre-commit

./: .pre-commit-config.yaml  pyproject.toml
test_pre_commit/: main.py
tests/: test_test_pre_commit_test.py
