[tool.poetry]
name = "test-pre-commit"
version = "0.1.0"
description = ""
authors = ["SteÌphane Trou <stephanetrou>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
testcontainers = "^3.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
